styling: modal z-index bug

--- a/client/src/components/Modal/hooks/styles.module.scss
+++ b/client/src/components/Modal/hooks/styles.module.scss
@@ -1,4 +1,4 @@
 .container {
 	position: fixed;
-	z-index: 11;
+	z-index: 100;
 }
