--- a/client/src/components/Modal/styles.module.scss
+++ b/client/src/components/Modal/styles.module.scss
@@ -2,11 +2,13 @@
 
 .container {
 	display: flex;
+	position: relative;
 	align-items: center;
 	justify-content: center;
 	height: 100vh;
 	width: 100vw;
 	background-color: rgba(0, 0, 0, 0.8);
+	animation: fade 1s;
 }
 
 .modal {
@@ -88,5 +90,15 @@
 	100% {
 		opacity: 1;
 		transform: translateY(0);
+	}
+}
+
+@keyframes fade {
+	0% {
+		opacity: 0;
+	}
+
+	100% {
+		opacity: 1;
 	}
 }
